--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-php_value auto_prepend_file "E:\ghoreishi\digito\core.php"
+php_value auto_prepend_file "D:\project\digito\core.php"
 
 RewriteEngine On
 
